# OmiControle

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml
agents/android/: README.md
agents/common/: Cargo.toml
agents/common/src/: lib.rs  stream.rs  telemetry.rs
agents/desktop/: Cargo.toml
agents/desktop/src/: cli.rs  main.rs  runtime.rs
backend/: .env.example  Cargo.toml  Makefile  deny.toml
backend/agents/common/src/: commands.rs  state.rs  stream.rs  updater.rs
backend/agents/desktop/src/: platform.rs
backend/crates/ai-orchestrator/: Cargo.toml
backend/crates/ai-orchestrator/src/: budget.rs  config.rs  router.rs  tools.rs
backend/crates/api-gateway/: Cargo.toml
backend/crates/api-gateway/src/: config.rs  main.rs  middleware.rs  routes.rs  state.rs
backend/crates/auth-service/: Cargo.toml
backend/crates/auth-service/src/: adapters.rs  app.rs  config.rs  domain.rs  grpc.rs  main.rs  ports.rs
backend/crates/command-executor/: Cargo.toml
backend/crates/command-executor/src/: config.rs
backend/crates/device-service/: Cargo.toml
backend/crates/device-service/src/: config.rs  grpc.rs  main.rs  registry.rs
backend/crates/notification-service/: Cargo.toml
backend/crates/plugin-host/: Cargo.toml
backend/crates/plugin-host/src/: main.rs
backend/crates/realtime-gateway/src/: config.rs  hub.rs  ws.rs
backend/crates/telemetry-service/: Cargo.toml
backend/crates/telemetry-service/src/: config.rs  grpc.rs  ingest.rs
backend/crates/workflow-engine/: Cargo.toml
backend/crates/workflow-engine/src/: grpc.rs  main.rs
backend/deploy/docker/: docker-compose.prod.yml  docker-compose.yml
backend/deploy/k8s/: api-gateway.yaml  namespace.yaml
backend/libs/auth/: Cargo.toml
backend/libs/auth/src/: jwt.rs  lib.rs  ticket.rs
backend/libs/common/: Cargo.toml
backend/libs/common/src/: id.rs  tenant.rs
backend/libs/config/: Cargo.toml
backend/libs/config/src/: lib.rs
backend/libs/crypto/: Cargo.toml
backend/libs/crypto/src/: aead.rs  kdf.rs  kms.rs  kx.rs
backend/libs/db/src/: outbox.rs  pool.rs
backend/libs/eventbus/: Cargo.toml
backend/libs/eventbus/src/: envelope.rs  lib.rs  redis_streams.rs
backend/libs/proto/: Cargo.toml  build.rs
backend/libs/telemetry/: Cargo.toml
backend/libs/telemetry/src/: lib.rs
backend/migrations/auth/: 0001_init.up.sql  0002_pending_registration.down.sql  0002_pending_registration.up.sql  0003_user_profile.down.sql  0003_user_profile.up.sql
backend/migrations/device/: 0001_init.up.sql
backend/migrations/telemetry/: 0001_init.up.sql
backend/proto/sequoia/v1/: ai.proto  auth.proto  plugin.proto
crates/ai-orchestrator/src/: agent.rs  grpc.rs  main.rs  provider.rs
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: config.rs  errors.rs  main.rs  middleware.rs  routes.rs
crates/auth-service/: Cargo.toml
crates/auth-service/src/: adapters.rs  domain.rs  grpc.rs  main.rs
crates/command-executor/: Cargo.toml
crates/command-executor/src/: grpc.rs  main.rs  sign.rs
crates/device-service/: Cargo.toml
crates/device-service/src/: config.rs  grpc.rs
crates/notification-service/: Cargo.toml
crates/notification-service/src/: channels.rs  config.rs  grpc.rs  main.rs  worker.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: config.rs  grpc.rs  runtime.rs
crates/realtime-gateway/: Cargo.toml
crates/realtime-gateway/src/: main.rs
crates/telemetry-service/: Cargo.toml
crates/telemetry-service/src/: main.rs  query.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: config.rs  scheduler.rs  step.rs  worker.rs
deploy/docker/: Dockerfile  otel-collector.yaml  prometheus.yml
deploy/helm/sequoia/: Chart.yaml  values.yaml
deploy/helm/sequoia/templates/: deployment.yaml
frontend/: .env.example  .eslintrc.json  Dockerfile  FRONTEND.md  Makefile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/public/: manifest.webmanifest
frontend/src/: middleware.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/ai/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/devices/: page.tsx
frontend/src/app/(app)/notifications/: page.tsx
frontend/src/app/(app)/profile/: page.tsx
frontend/src/components/primitives/: Badge.tsx  Button.tsx  Kbd.tsx  Modal.tsx  Plate.tsx  SignalDot.tsx  Sparkline.tsx  Stat.tsx  index.ts
frontend/src/components/shell/: CommandPalette.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/widgets/: AIAssistantPanel.tsx  ActivityFeed.tsx  AmbientPulse.tsx  FleetMap.tsx
frontend/src/lib/: i18n.tsx  utils.ts
frontend/src/lib/api/: client.ts  hooks.ts
frontend/src/lib/auth/: session.ts
frontend/src/lib/store/: realtime.ts
frontend/src/lib/tauri/: bridge.ts
frontend/src/lib/ws/: RealtimeBoundary.tsx  client.ts
frontend/src/styles/: fonts.ts  tokens.css
frontend/src/types/: events.ts
libs/auth/: Cargo.toml
libs/auth/src/: jwks.rs  policy.rs  rbac.rs
libs/common/: Cargo.toml
libs/common/src/: actor.rs  context.rs  error.rs  id.rs  lib.rs  pagination.rs  time.rs
libs/crypto/src/: kdf.rs  lib.rs  sig.rs
libs/db/: Cargo.toml
libs/db/src/: lib.rs  pool.rs
libs/eventbus/: Cargo.toml
libs/proto/: build.rs
libs/proto/src/: lib.rs
libs/telemetry/src/: lib.rs
migrations/ai/: 0001_init.up.sql
migrations/audit/: 0001_init.up.sql
migrations/auth/: 0001_init.up.sql
migrations/notification/: 0001_init.up.sql
migrations/plugin/: 0001_init.up.sql
migrations/workflow/: 0001_init.up.sql
plugin-sdk/: Cargo.toml
plugin-sdk/src/: lib.rs
plugin-sdk/wit/: sequoia.wit
proto/sequoia/v1/: command.proto  common.proto  device.proto  notification.proto  realtime.proto  telemetry.proto  workflow.proto
scripts/: dev-down.sh  dev-up.sh
(+10 files in other folders)
