[workspace]
resolver = "2"
members = [
    # Shared libraries
    "libs/common",
    "libs/config",
    "libs/telemetry",
    "libs/auth",
    "libs/crypto",
    "libs/eventbus",
    "libs/db",
    "libs/proto",

    # Services
    "crates/api-gateway",
    "crates/auth-service",
    "crates/device-service",
    "crates/ai-orchestrator",
    "crates/realtime-gateway",
    "crates/telemetry-service",
    "crates/notification-service",
    "crates/workflow-engine",
    "crates/plugin-host",
    "crates/command-executor",

    # Agents
    "agents/common",
    "agents/desktop",

    # SDK
    "plugin-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/sequoia-platform/sequoia"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
async-trait = "0.1"

# HTTP / web
axum = { version = "0.7", features = ["ws", "macros", "tracing", "http2"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-full", "limit", "timeout", "request-id", "sensitive-headers", "auth"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "gzip", "brotli", "http2"] }

# gRPC
tonic = { version = "0.12", features = ["transport", "tls", "tls-roots"] }
tonic-reflection = "0.12"
tonic-health = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_with = "3"
bincode = "1.3"
rmp-serde = "1.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "macros", "migrate", "ipnetwork"] }
deadpool-redis = "0.18"
redis = { version = "0.27", features = ["tokio-comp", "tokio-rustls-comp", "connection-manager", "streams", "json", "cluster-async"] }

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.27"
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Crypto / auth
jsonwebtoken = "9"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
ulid = { version = "1.1", features = ["serde", "uuid"] }

# OAuth / OIDC
oauth2 = { version = "4.4", features = ["reqwest"] }
openidconnect = { version = "3.5", features = ["reqwest"] }

# Errors
thiserror = "2"
anyhow = "1"
eyre = "0.6"

# Time
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
config = { version = "0.14", default-features = false, features = ["toml", "yaml", "json"] }
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
garde = { version = "0.20", features = ["derive", "regex"] }

# Concurrency / sync
parking_lot = "0.12"
dashmap = "6"
arc-swap = "1.7"
crossbeam = "0.8"

# WASM (plugins)
wasmtime = { version = "27", features = ["component-model", "async", "cranelift"] }
wasmtime-wasi = "27"
wit-bindgen = "0.34"

# Misc
once_cell = "1"
bytes = "1"
url = { version = "2", features = ["serde"] }
mime = "0.3"
itertools = "0.13"
indexmap = { version = "2", features = ["serde"] }
smallvec = { version = "1", features = ["serde", "union"] }
governor = "0.7"
backoff = { version = "0.4", features = ["tokio"] }
moka = { version = "0.12", features = ["future"] }

# Workspace-internal
sequoia-common = { path = "libs/common" }
sequoia-config = { path = "libs/config" }
sequoia-telemetry = { path = "libs/telemetry" }
sequoia-auth = { path = "libs/auth" }
sequoia-crypto = { path = "libs/crypto" }
sequoia-eventbus = { path = "libs/eventbus" }
sequoia-db = { path = "libs/db" }
sequoia-proto = { path = "libs/proto" }
sequoia-agent-common = { path = "agents/common" }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
panic = "abort"
debug = false
overflow-checks = false

[profile.release-debug]
inherits = "release"
strip = false
debug = "limited"

[profile.dev]
opt-level = 0
debug = true
incremental = true
split-debuginfo = "unpacked"

# Faster dev builds for deps
[profile.dev.package."*"]
opt-level = 3
debug = false
