[package]
name = "sequoia-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDK for authoring Sequoia plugins as WASM components. Author-side helpers + WIT contracts."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = []
# Enable when building inside a WASM component (wit-bindgen-aware build).
guest = []
