[package]
name = "sequoia-agent-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sequoia-agent"
path = "src/main.rs"

[dependencies]
sequoia-agent-common.workspace = true
sequoia-crypto.workspace = true
sequoia-proto.workspace = true

tokio.workspace = true
tonic.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow = { workspace = true }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
time.workspace = true
ulid.workspace = true
parking_lot.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
# launchctl integration done via shell-out; security-framework optional.

[target.'cfg(target_os = "linux")'.dependencies]
# systemd integration via journald + notify-socket; both optional.
