[package]
name = "sequoia-auth-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "auth-service"
path = "src/main.rs"

[dependencies]
sequoia-common.workspace = true
sequoia-config.workspace = true
sequoia-telemetry.workspace = true
sequoia-auth.workspace = true
sequoia-crypto.workspace = true
sequoia-db.workspace = true
sequoia-proto.workspace = true

tokio.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
prost.workspace = true
async-trait.workspace = true

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow = { workspace = true }
tracing.workspace = true
time.workspace = true
uuid.workspace = true
ulid.workspace = true

argon2.workspace = true
jsonwebtoken.workspace = true
sha2.workspace = true
rand.workspace = true
openidconnect.workspace = true
oauth2.workspace = true
reqwest.workspace = true
moka.workspace = true
