[package]
name = "sequoia-plugin-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]] name = "plugin-host" path = "src/main.rs"

[dependencies]
sequoia-common.workspace = true
sequoia-config.workspace = true
sequoia-telemetry.workspace = true
sequoia-crypto.workspace = true
sequoia-db.workspace = true
sequoia-proto.workspace = true
sequoia-plugin-sdk = { path = "../../plugin-sdk" }

tokio.workspace = true
tonic.workspace = true
async-trait.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow = { workspace = true }
tracing.workspace = true
time.workspace = true
uuid.workspace = true
ulid.workspace = true
sha2.workspace = true
moka.workspace = true
