[package]
name = "sequoia-realtime-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "realtime-gateway"
path = "src/main.rs"

[dependencies]
sequoia-common.workspace = true
sequoia-config.workspace = true
sequoia-telemetry.workspace = true
sequoia-auth.workspace = true
sequoia-eventbus.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
futures.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow = { workspace = true }
tracing.workspace = true
time.workspace = true
uuid.workspace = true
ulid.workspace = true
dashmap.workspace = true
moka.workspace = true
