[package]
name = "sequoia-desktop-shell"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Tauri shell that hosts the Sequoia OS web app as a native desktop application."

[lib]
name = "sequoia_desktop_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "sequoia-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification  = "2"
tauri-plugin-os            = "2"
tauri-plugin-shell         = "2"
tauri-plugin-store         = "2"
tauri-plugin-window-state  = "2"
tauri-plugin-deep-link     = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
keyring = "3"
