[package]
name = "sequoia-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Domain types, errors, IDs, pagination — shared across all Sequoia services."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true
validator.workspace = true
base64.workspace = true
hex.workspace = true
async-trait.workspace = true
