[package]
name = "sequoia-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Postgres pool + repository helpers + transactional outbox."

[dependencies]
sequoia-common.workspace = true
sqlx.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
ulid.workspace = true
uuid.workspace = true
