[package]
name = "sequoia-eventbus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pluggable event bus (Redis Streams default) with at-least-once consumer groups."

[dependencies]
sequoia-common.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
bytes.workspace = true
time.workspace = true
