[package]
name = "sequoia-notification-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "notification-service"
path = "src/main.rs"

[dependencies]
sequoia-common.workspace = true
sequoia-config.workspace = true
sequoia-telemetry.workspace = true
sequoia-crypto.workspace = true
sequoia-db.workspace = true
sequoia-eventbus.workspace = true
sequoia-proto.workspace = true

tokio.workspace = true
tonic.workspace = true
async-trait.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow = { workspace = true }
tracing.workspace = true
time.workspace = true
uuid.workspace = true
reqwest.workspace = true
ulid.workspace = true
